--- a/channelnest/templates/video/video.html
+++ b/channelnest/templates/video/video.html
@@ -1,3 +1,6 @@
+{% extends 'video/layout.html' %}
+
+{% block content %}
 <link href="//vjs.zencdn.net/5.19.2/video-js.css" rel="stylesheet">
 
 <div class="jumbotron">
@@ -33,3 +36,4 @@
 
 <script src="//vjs.zencdn.net/5.19.2/video.js"></script>
 <script id="dsq-count-scr" src="//channelnest.disqus.com/count.js" async></script>
+{% endblock %}
