--- a/channelnest/templates/video/index.html
+++ b/channelnest/templates/video/index.html
@@ -1,9 +1,34 @@
-{% if videos %}
-    <ul>
+{% extends 'video/layout.html' %}
+{% load static %}
+
+{% block content %}
+<div class="jumbotron">
+    <h1><img src="{% static 'channelnest/images/logo.png' %}" height="100" width="100" alt="ChannelNest Logo"/>
+        <span class="cn-blue">ChannelNest</span></h1>
+    <p>See, share, discuss, catalog surveillance videos.</p>
+</div>
+
+<h2>Most Recently Added ...</h2>
+
+<div class="row" style="background-color: #add8e6">
     {% for video in videos %}
-        <li><a href="{% url 'channelnest:video' video.id %}">{{ video.title }}</a></li>
+    <div class="col-md-4" style="padding-top:20px">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{ video.title }}</h3>
+            </div>
+            <div class="panel-body">
+                <p><a href="{% url 'channelnest:video' video.id %}">
+                    <img src="https://clips.dropcam.com/{{ video.id }}.jpg" class="img img-responsive"/></a>
+                </p>
+            </div>
+            <div class="panel-footer">
+                <p>
+                    <small><em>{{ video.date_created|date:'c' }} Central Time (USA)</em></small>
+                </p>
+            </div>
+        </div>
+    </div>
     {% endfor %}
-    </ul>
-{% else %}
-    <p>No videos are available.</p>
-{% endif %}
+</div>
+{% endblock %}
