--- a/channelnest/templates/video/videoSubmit.html
+++ b/channelnest/templates/video/videoSubmit.html
@@ -1,4 +1,7 @@
+{% extends 'video/layout.html' %}
 {% load static %}
+
+{% block content %}
 <div class="jumbotron">
     <h1>Submit a Video</h1>
     <p>Currently we only accept Nest.com videos.</p>
@@ -64,3 +67,4 @@
         }
     });
 </script>
+{% endblock %}
