Fix environment; video submit redirect

--- a/channelnest/templates/video/videoSubmit.html
+++ b/channelnest/templates/video/videoSubmit.html
@@ -61,7 +61,7 @@
                     $spinner.hide();
                 } else {
                     // Passed! Redirect to new video page
-                    window.location = "//channelnest.com/video/" + data.id;
+                    window.location = "/video/" + data.id;
                 }
             });
         }
