--- a/channelnest/templates/registration/profile.html
+++ b/channelnest/templates/registration/profile.html
@@ -3,42 +3,25 @@
 
 {% block content %}
 <h2>Profile</h2>
+<div>
+    <div class="col-sm-6 text-right">Username:</div>
+    <div class="col-sm-6">{{ user.username }}</div>
+</div>
+<div>
+    <div class="col-sm-6 text-right">First Name:</div>
+    <div class="col-sm-6">{{ user.first_name }}</div>
+</div>
+<div>
+    <div class="col-sm-6 text-right">Last Name:</div>
+    <div class="col-sm-6">{{ user.last_name }}</div>
+</div>
+<div>
+    <div class="col-sm-6 text-right">Join Date:</div>
+    <div class="col-sm-6">{{ user.date_joined }}</div>
+</div>
+<div>
+    <div class="col-sm-6 text-right">Last Login:</div>
+    <div class="col-sm-6">{{ user.last_login }}</div>
+</div>
 
-<form method="post" action="{% url 'channelnest:register' %}" class="form-horizontal">
-{% csrf_token %}
-    <div class="form-group form-group-lg">
-        <label class="col-sm-3 text-right control-label" for="id_username">Username:</label>
-        <div class="col-sm-9">
-            <input class="form-control" type="text" autofocus id="id_username" required name="username">
-        </div>
-    </div>
-    <div class="form-group form-group-lg">
-        <label class="col-sm-3 text-right control-label" for="id_password">Password:</label>
-        <div class="col-sm-9">
-            <input class="form-control" type="password" id="id_password" required name="password">
-            <div class="progress">
-                <div id="complexity-bar" class="progress-bar progress-bar-danger" role="progressbar" style="width: 0%;"></div>
-            </div>
-        </div>
-    </div>
-    <div class="form-group form-group-lg">
-        <div class="col-sm-3 text-right">
-            &nbsp;
-        </div>
-        <div class="col-sm-9">
-            <input class="btn btn-lg btn-success" type="submit" value="Create Account" />
-        </div>
-    </div>
-</form>
-
-<script src="{% static 'channelnest/jquery.complexify.js' %}"></script>
-<script>
-	$('#id_password').complexify({}, function (valid, complexity) {
-		var progressBar = $('#complexity-bar');
-
-		progressBar.toggleClass('progress-bar-success', valid);
-		progressBar.toggleClass('progress-bar-danger', !valid);
-		progressBar.css({'width': complexity + '%'});
-	});
-</script>
 {% endblock %}
