--- a/channelnest/templates/video/layout.html
+++ b/channelnest/templates/video/layout.html
@@ -36,7 +36,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         {% if user.is_authenticated %}
-                            <li><a href="{% url 'logout' %}">{{ user.username }}</a></li>
+                            <li><a href="{% url 'channelnest:profile' user.username %}">{{ user.username }}</a></li>
                             <li><a href="{% url 'logout' %}">Log out</a></li>
                         {% else %}
                             <li><a href="{% url 'channelnest:register' %}">Register</a></li>
