--- a/channelnest/templates/account/login.html
+++ b/channelnest/templates/account/login.html
@@ -13,12 +13,12 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'channelnest:login' %}" class="form-horizontal">
+<form method="post" action="{% url 'account_login' %}" class="form-horizontal">
 {% csrf_token %}
     <div class="form-group form-group-lg">
-        <label class="col-sm-3 text-right control-label" for="id_username">Username:</label>
+        <label class="col-sm-3 text-right control-label" for="id_login">Username:</label>
         <div class="col-sm-9">
-            <input class="form-control" type="text" autofocus id="id_username" required name="username">
+            <input class="form-control" type="text" autofocus id="id_login" required name="login">
         </div>
     </div>
     <div class="form-group form-group-lg">
@@ -39,6 +39,6 @@
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p><a href="{% url 'account_reset_password' %}">Lost password?</a></p>
 
 {% endblock %}
